--- a/Ideal/Ideal.csproj
+++ b/Ideal/Ideal.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ViewResources\Graphicrating-Koloria-Chart-Bar-Document.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -121,6 +124,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="ViewResources\clouds.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="ViewResources\Graphicrating-Koloria-Chart-Bar-Document.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
