--- a/Ideal/App.config
+++ b/Ideal/App.config
@@ -13,4 +13,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<connectionStrings><add name="IdealContext" connectionString="data source=.\sqlexpress;initial catalog=ideal;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
